Builds. So many builds

--- a/.github/workflows/build_lws_android_arm32.yml
+++ b/.github/workflows/build_lws_android_arm32.yml
@@ -1,4 +1,4 @@
-name: lws-android-arm64
+name: lws-android-arm32
 
 on:
   workflow_dispatch:
@@ -7,7 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -23,7 +22,7 @@ jobs:
           path: android-ndk-r23c
           key: android-ndk-r23c-${{ runner.os }}-v23c
 
-      - name: Fetch lws + NDK (android arm64)
+      - name: Fetch lws + NDK (android arm32)
         run: |
           set -euo pipefail
           SUDO=""
@@ -41,7 +40,7 @@ jobs:
           cd libwebsockets
           git checkout v4.3-stable
 
-      - name: Build lws (android arm64)
+      - name: Build lws (android arm32)
         run: |
           set -euo pipefail
           export ANDROID_NDK="$GITHUB_WORKSPACE/android-ndk-r23c"
@@ -49,22 +48,21 @@ jobs:
           mkdir -p out && cd out
           cmake \
             -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake" \
-            -DANDROID_ABI=arm64-v8a \
-            -DANDROID_PLATFORM=21 \
+            -DANDROID_ABI=armeabi-v7a \
+            -DANDROID_PLATFORM=19 \
             -DBUILD_SHARED_LIBS=OFF \
             -DLWS_WITH_SSL=0 \
             -DCMAKE_BUILD_TYPE=Release ..
           cmake --build . --config Release -j$(nproc)
           cd "$GITHUB_WORKSPACE"
-          mkdir -p staging/lws/android_arm64_release
-          cp -a libwebsockets/include staging/lws/android_arm64_release/
+          mkdir -p staging/lws/android_arm32_release
+          cp -a libwebsockets/include staging/lws/android_arm32_release/
           LWS_LIB_PATH=$(cd libwebsockets && find out -name 'libwebsockets.a' -print -quit)
-          cp "libwebsockets/${LWS_LIB_PATH}" staging/lws/android_arm64_release/
+          cp "libwebsockets/${LWS_LIB_PATH}" staging/lws/android_arm32_release/
 
-      - name: Upload
+      - name: Upload lws (android arm32)
         if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
-          name: prebuilt_lws_android_arm64
+          name: prebuilt_lws_android_arm32
           path: staging/
-
