--- a/.github/workflows/build_v8_windows_arm64.yml
+++ b/.github/workflows/build_v8_windows_arm64.yml
@@ -1,30 +1,30 @@
-# This is a basic workflow to help you get started with Actions
-
 name: v8-windows-arm64
 
-# Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      v8_version:
+        required: true
+        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: windows-2019
+    env:
+      V8_VERSION: ${{ inputs.v8_version || github.event.inputs.v8_version }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
         with:
           path: Scripts
 
       - uses: actions/setup-python@v5
+        if: ${{ vars.HOST_WINDOWS != 'true' }}
         with:
           python-version: '3.12'
+          architecture: 'x64'
 
-      # Runs a single command using the runners shell
       - name: Fetch v8
         shell: cmd
         run: |
@@ -50,13 +50,14 @@ jobs:
           mkdir v8
           cd v8
           echo _____fetch_____
-          call fetch v8
+          call fetch v8 --nohooks
           echo _____enter_____
           cd v8
           echo _____checkout_____
-          call git checkout refs/tags/12.4.254.20
+          call git fetch origin refs/tags/%V8_VERSION%
+          call git checkout origin refs/tags/%V8_VERSION%
           echo _____sync_____
-          call gclient sync
+          call gclient sync -D --force --reset
 
           echo _____ninja_____ dont know why v8gen.py cant properly generate files we want
           call gn gen .\out.gn\arm64.release -args="is_component_build=false is_debug=false target_cpu=""arm64"" target_os=""win"" v8_enable_i18n_support=false v8_monolithic=true v8_use_external_startup_data=false v8_enable_pointer_compression=true v8_jitless=false use_custom_libcxx=false treat_warnings_as_errors=false v8_symbol_level=0 v8_enable_sandbox=false"
@@ -69,9 +70,10 @@ jobs:
           dir %GITHUB_WORKSPACE%\v8\v8\out.gn\arm64.release\obj\*.lib
 
       - name: Upload
+        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
-        with: 
+        with:
           path: v8/v8/out.gn/arm64.release/obj/v8_monolith.lib
           name: prebuilt_v8_windows_arm64
-        
+
 
