--- a/.github/workflows/build_lws_android_x86_64.yml
+++ b/.github/workflows/build_lws_android_x86_64.yml
@@ -1,4 +1,4 @@
-name: lws-android-arm64
+name: lws-android-x86_64
 
 on:
   workflow_dispatch:
@@ -7,7 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -23,7 +22,7 @@ jobs:
           path: android-ndk-r23c
           key: android-ndk-r23c-${{ runner.os }}-v23c
 
-      - name: Fetch lws + NDK (android arm64)
+      - name: Fetch lws + NDK (android x86_64)
         run: |
           set -euo pipefail
           SUDO=""
@@ -38,10 +37,8 @@ jobs:
             unzip -q android-ndk.zip
           fi
           git clone https://libwebsockets.org/repo/libwebsockets
-          cd libwebsockets
-          git checkout v4.3-stable
 
-      - name: Build lws (android arm64)
+      - name: Build lws (android x86_64)
         run: |
           set -euo pipefail
           export ANDROID_NDK="$GITHUB_WORKSPACE/android-ndk-r23c"
@@ -49,22 +46,30 @@ jobs:
           mkdir -p out && cd out
           cmake \
             -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake" \
-            -DANDROID_ABI=arm64-v8a \
+            -DANDROID_ABI=x86_64 \
             -DANDROID_PLATFORM=21 \
             -DBUILD_SHARED_LIBS=OFF \
+            -DLWS_WITH_SHARED=OFF \
+            -DLWS_WITH_STATIC=ON \
             -DLWS_WITH_SSL=0 \
+            -DLWS_WITH_ZLIB=0 \
+            -DLWS_WITH_TESTAPPS=OFF \
+            -DLWS_WITH_MINIMAL_EXAMPLES=OFF \
+            -DLWS_WITHOUT_TESTAPPS=ON \
+            -DLWS_INSTALL_EXAMPLES=OFF \
+            -DINSTALL_LWS_TESTAPPS=OFF \
+            -DBUILD_TESTING=OFF \
             -DCMAKE_BUILD_TYPE=Release ..
           cmake --build . --config Release -j$(nproc)
           cd "$GITHUB_WORKSPACE"
-          mkdir -p staging/lws/android_arm64_release
-          cp -a libwebsockets/include staging/lws/android_arm64_release/
+          mkdir -p staging/lws/android_x86_64_release
+          cp -a libwebsockets/include staging/lws/android_x86_64_release/
           LWS_LIB_PATH=$(cd libwebsockets && find out -name 'libwebsockets.a' -print -quit)
-          cp "libwebsockets/${LWS_LIB_PATH}" staging/lws/android_arm64_release/
+          cp "libwebsockets/${LWS_LIB_PATH}" staging/lws/android_x86_64_release/
 
-      - name: Upload
+      - name: Upload lws (android x86_64)
         if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
-          name: prebuilt_lws_android_arm64
+          name: prebuilt_lws_android_x86_64
           path: staging/
-
