--- a/.github/workflows/build_v8_android_arm32.yml
+++ b/.github/workflows/build_v8_android_arm32.yml
@@ -1,12 +1,19 @@
-name: v8-linux-x86_64
+# Build V8 for Android arm32 (reusable + manually dispatchable)
+
+name: v8-android-arm32
 
 on:
   workflow_dispatch:
     inputs:
       v8_version:
         description: 'v8 version tag'
-        type: string
-        required: false
+        type: choice
+        options:
+          - "13.5.119"
+          - "12.9.202.28" # 2022
+          - "12.4.254.21" # 2019
+        required: true
+        default: "13.5.119"
       use_loopback:
         description: 'Enable loopback disk workaround before heavy apt installs (hacky)'
         type: boolean
@@ -47,6 +54,13 @@ jobs:
           restore-keys: |
             depot_tools-${{ runner.os }}-
 
+      - name: Cache Android NDK r23c
+        uses: actions/cache@v4
+        with:
+          path: android-ndk-r23c
+          key: android-ndk-r23c-${{ runner.os }}-v23c
+
+      # See https://v8.dev/docs/cross-compile-arm
       - name: Fetch v8
         run: |
           set -euo pipefail
@@ -56,9 +70,19 @@ jobs:
           sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* || true
           sudo DEBIAN_FRONTEND=noninteractive apt-get update
           sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-            ninja-build generate-ninja pkg-config ca-certificates git
+            ninja-build generate-ninja pkg-config zip unzip ca-certificates git
 
           cd $GITHUB_WORKSPACE
+
+          if [ ! -d "$GITHUB_WORKSPACE/android-ndk-r23c" ]; then
+            wget -O android-ndk.zip -q https://dl.google.com/android/repository/android-ndk-r23c-linux.zip
+            unzip -q android-ndk.zip
+          fi
+          export ANDROID_NDK=$GITHUB_WORKSPACE/android-ndk-r23c
+          echo "default_android_ndk_root = \"$GITHUB_WORKSPACE/android-ndk-r23c\"" >> $GITHUB_WORKSPACE/Scripts/v8.android_arm32.args.gn
+          echo "default_android_ndk_version = \"r23c\"" >> $GITHUB_WORKSPACE/Scripts/v8.android_arm32.args.gn
+          cat $GITHUB_WORKSPACE/Scripts/v8.android_arm32.args.gn
+
           if [ ! -d "$GITHUB_WORKSPACE/depot_tools" ]; then
             git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
           fi
@@ -67,13 +91,15 @@ jobs:
           gclient
           mkdir -p $GITHUB_WORKSPACE/v8
           cd $GITHUB_WORKSPACE/v8
-          fetch --nohooks --nohistory v8
+          fetch --nohooks v8
+          echo "target_os = ['android']" >> .gclient
+          cat .gclient
           cd v8
           git fetch origin refs/tags/${{ env.V8_VERSION }}
           git checkout origin refs/tags/${{ env.V8_VERSION }}
           gclient sync -D --force --reset
 
-      - name: Build v8 x86_64
+      - name: Build v8 arm32
         run: |
           set -euo pipefail
           echo "Disk before build-deps:"
@@ -98,21 +124,24 @@ jobs:
             df -h /var/lib/dpkg /mnt/extra || true
           fi
 
-          sh ./build/install-build-deps.sh
+          sh ./build/install-build-deps.sh --android
 
           # Clean apt caches after heavy install
           sudo apt-get clean || true
           sudo rm -rf /var/lib/apt/lists/* || true
-          python ./tools/dev/v8gen.py x64.release
-          cp $GITHUB_WORKSPACE/Scripts/v8.linux_x86_64.args.gn $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/args.gn
-          ls -l $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/
-          ninja -C ./out.gn/x64.release v8_monolith
+          python ./build/linux/sysroot_scripts/install-sysroot.py --arch=arm
+          python ./tools/dev/v8gen.py arm.release
+          cp $GITHUB_WORKSPACE/Scripts/v8.android_arm32.args.gn $GITHUB_WORKSPACE/v8/v8/out.gn/arm.release/args.gn
+          cat $GITHUB_WORKSPACE/v8/v8/out.gn/arm.release/args.gn
+          ninja -C ./out.gn/arm.release v8_monolith
+
+          cd $GITHUB_WORKSPACE
+          mkdir -p staging/v8/android.arm32.release
+          cp $GITHUB_WORKSPACE/v8/v8/out.gn/arm.release/obj/libv8_monolith.a staging/v8/android.arm32.release/
 
       - name: Upload
         if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
-          path: v8/v8/out.gn/x64.release/obj/libv8_monolith.a
-          name: prebuilt_v8_linux_x86_64
-
-
+          name: prebuilt_v8_android_arm32
+          path: staging/
