--- a/.github/workflows/build_v8_android_x86_64.yml
+++ b/.github/workflows/build_v8_android_x86_64.yml
@@ -1,12 +1,19 @@
-name: v8-linux-x86_64
+# Build V8 for Android x86_64 (reusable + manually dispatchable)
+
+name: v8-android-x86_64
 
 on:
   workflow_dispatch:
     inputs:
       v8_version:
         description: 'v8 version tag'
-        type: string
-        required: false
+        type: choice
+        options:
+          - "13.5.119"
+          - "12.9.202.28" # 2022
+          - "12.4.254.21" # 2019
+        required: true
+        default: "13.5.119"
       use_loopback:
         description: 'Enable loopback disk workaround before heavy apt installs (hacky)'
         type: boolean
@@ -37,7 +44,6 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-          architecture: 'x64'
 
       - name: Cache depot_tools
         uses: actions/cache@v4
@@ -46,6 +52,12 @@ jobs:
           key: depot_tools-${{ runner.os }}-${{ github.ref_name }}
           restore-keys: |
             depot_tools-${{ runner.os }}-
+
+      - name: Cache Android NDK r23c
+        uses: actions/cache@v4
+        with:
+          path: android-ndk-r23c
+          key: android-ndk-r23c-${{ runner.os }}-v23c
 
       - name: Fetch v8
         run: |
@@ -56,9 +68,18 @@ jobs:
           sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* || true
           sudo DEBIAN_FRONTEND=noninteractive apt-get update
           sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-            ninja-build generate-ninja pkg-config ca-certificates git
+            ninja-build generate-ninja pkg-config zip unzip ca-certificates git
 
           cd $GITHUB_WORKSPACE
+          if [ ! -d "$GITHUB_WORKSPACE/android-ndk-r23c" ]; then
+            wget -O android-ndk.zip -q https://dl.google.com/android/repository/android-ndk-r23c-linux.zip
+            unzip -q android-ndk.zip
+          fi
+          export ANDROID_NDK=$GITHUB_WORKSPACE/android-ndk-r23c
+          echo "default_android_ndk_root = \"$GITHUB_WORKSPACE/android-ndk-r23c\"" >> $GITHUB_WORKSPACE/Scripts/v8.android_x86_64.args.gn
+          echo "default_android_ndk_version = \"r23c\"" >> $GITHUB_WORKSPACE/Scripts/v8.android_x86_64.args.gn
+          cat $GITHUB_WORKSPACE/Scripts/v8.android_x86_64.args.gn
+
           if [ ! -d "$GITHUB_WORKSPACE/depot_tools" ]; then
             git clone https://chromium.googlesource.com/chromium/tools/depot_tools.git
           fi
@@ -67,7 +88,9 @@ jobs:
           gclient
           mkdir -p $GITHUB_WORKSPACE/v8
           cd $GITHUB_WORKSPACE/v8
-          fetch --nohooks --nohistory v8
+          fetch v8 --nohooks
+          echo "target_os = ['android']" >> .gclient
+          cat .gclient
           cd v8
           git fetch origin refs/tags/${{ env.V8_VERSION }}
           git checkout origin refs/tags/${{ env.V8_VERSION }}
@@ -98,21 +121,20 @@ jobs:
             df -h /var/lib/dpkg /mnt/extra || true
           fi
 
-          sh ./build/install-build-deps.sh
+          sh ./build/install-build-deps.sh --android
 
           # Clean apt caches after heavy install
           sudo apt-get clean || true
           sudo rm -rf /var/lib/apt/lists/* || true
+          python ./build/linux/sysroot_scripts/install-sysroot.py --arch=x64
           python ./tools/dev/v8gen.py x64.release
-          cp $GITHUB_WORKSPACE/Scripts/v8.linux_x86_64.args.gn $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/args.gn
-          ls -l $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/
+          cp $GITHUB_WORKSPACE/Scripts/v8.android_x86_64.args.gn $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/args.gn
+          cat $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/args.gn
           ninja -C ./out.gn/x64.release v8_monolith
 
       - name: Upload
         if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
+          name: prebuilt_v8_android_x86_64
           path: v8/v8/out.gn/x64.release/obj/libv8_monolith.a
-          name: prebuilt_v8_linux_x86_64
-
-
