--- a/.github/workflows/build_v8_ios_arm64.yml
+++ b/.github/workflows/build_v8_ios_arm64.yml
@@ -1,30 +1,30 @@
-# This is a basic workflow to help you get started with Actions
-
 name: v8-ios-arm64
 
-# Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  workflow_call:
+    inputs:
+      v8_version:
+        required: true
+        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: macos-latest
+    env:
+      V8_VERSION: ${{ inputs.v8_version || github.event.inputs.v8_version }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v4
         with:
           path: Scripts
 
       - uses: actions/setup-python@v5
+        if: ${{ vars.HOST_MACOS != 'true' }}
         with:
           python-version: '3.12'
+          architecture: 'x64'
 
-      # Runs a single command using the runners shell
       # See https://v8.dev/docs/cross-compile-ios
       - name: Fetch v8
         run: |
@@ -35,12 +35,13 @@ jobs:
           gclient
           mkdir $GITHUB_WORKSPACE/v8
           cd $GITHUB_WORKSPACE/v8
-          fetch v8
+          fetch v8 --nohooks
           echo "target_os = ['ios']" >> .gclient
           cat .gclient
           cd v8
-          git checkout refs/tags/12.4.254.20
-          gclient sync -D
+          git fetch origin refs/tags/${{ env.V8_VERSION }}
+          git checkout origin refs/tags/${{ env.V8_VERSION }}
+          gclient sync -D --force --reset
 
       - name: Build v8 ios-arm64
         run: |
@@ -54,9 +55,10 @@ jobs:
           ninja -C ./out.gn/arm64.release v8_monolith
 
       - name: Upload
+        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
-        with: 
+        with:
           path: v8/v8/out.gn/arm64.release/obj/libv8_monolith.a
           name: prebuilt_v8_ios_arm64
-        
+
 
