--- a/.github/workflows/build_v8_macos_x86_64.yml
+++ b/.github/workflows/build_v8_macos_x86_64.yml
@@ -1,4 +1,6 @@
-name: v8-macos-arm64
+# This workflow builds V8 for macOS x86_64
+
+name: v8-macos-x86_64
 
 on:
   workflow_dispatch:
@@ -36,27 +38,26 @@ jobs:
           gclient
           mkdir $GITHUB_WORKSPACE/v8
           cd $GITHUB_WORKSPACE/v8
-          fetch --nohooks v8
+          fetch --nohooks --nohistory v8
           cd v8
           git fetch origin refs/tags/${{ env.V8_VERSION }}
           git checkout origin refs/tags/${{ env.V8_VERSION }}
           gclient sync -D --force --reset
 
-      - name: Build v8 arm64
+      - name: Build v8 x86_64
         run: |
           export PATH=$GITHUB_WORKSPACE/depot_tools:$PATH
           cd $GITHUB_WORKSPACE/v8/v8
-          python ./tools/dev/v8gen.py arm64.release
-          cp $GITHUB_WORKSPACE/Scripts/v8.macos_arm64.args.gn $GITHUB_WORKSPACE/v8/v8/out.gn/arm64.release/args.gn
+          python ./tools/dev/v8gen.py x64.release
+          cp $GITHUB_WORKSPACE/Scripts/v8.macos_x86_64.args.gn $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/args.gn
           ls -l $GITHUB_WORKSPACE/depot_tools/ninja 
           ls -l $GITHUB_WORKSPACE/depot_tools/autoninja 
-          ninja -C ./out.gn/arm64.release v8_monolith
+          ninja -C ./out.gn/x64.release v8_monolith
 
       - name: Upload
         if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
-          path: v8/v8/out.gn/arm64.release/obj/libv8_monolith.a
-          name: prebuilt_v8_macos_arm64
-
+          name: prebuilt_v8_macos_x86_64
+          path: v8/v8/out.gn/x64.release/obj/libv8_monolith.a
 
