--- a/v8.ios_x86_64.args.gn
+++ b/v8.ios_x86_64.args.gn
@@ -4,6 +4,7 @@
 # v8_enable_verify_heap = true
 
 target_os = "ios"
+target_environment = "device"
 target_cpu = "x64"
 v8_target_cpu = "x64"
 # use_sysroot = false
@@ -27,7 +28,7 @@ enable_ios_bitcode = true
 ios_enable_code_signing = false
 
 use_custom_libcxx = false            # Use Xcode's libcxx.
-treat_warnings_as_errors = false    # 
-v8_symbol_level = 0                 # smaller lib 
-v8_enable_sandbox = false 
+treat_warnings_as_errors = false    #
+v8_symbol_level = 0                 # smaller lib
+v8_enable_sandbox = false
 use_rtti = true
