Windows should be building libwebsockets v4.3 too

--- a/.github/workflows/build_lws_windows_arm64.yml
+++ b/.github/workflows/build_lws_windows_arm64.yml
@@ -27,6 +27,7 @@ jobs:
           Set-StrictMode -Version Latest
           cd $env:GITHUB_WORKSPACE
           git clone https://libwebsockets.org/repo/libwebsockets
+          git checkout v4.3-stable
 
       - name: Build lws (windows arm64)
         shell: pwsh
