--- a/.github/workflows/build_v8_linux_arm64.yml
+++ b/.github/workflows/build_v8_linux_arm64.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       V8_VERSION: ${{ inputs.v8_version || github.event.inputs.v8_version }}
 
