--- a/.github/workflows/build_lws_android_x86_64.yml
+++ b/.github/workflows/build_lws_android_x86_64.yml
@@ -70,7 +70,7 @@ jobs:
           cp "libwebsockets/${LWS_LIB_PATH}" staging/lws/android_x86_64_release/
 
       - name: Upload lws (android x86_64)
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_lws_android_x86_64
