--- a/.github/workflows/build_lws_ios_arm64.yml
+++ b/.github/workflows/build_lws_ios_arm64.yml
@@ -80,7 +80,7 @@ jobs:
           cp "libwebsockets/out/${LWS_LIB_PATH}" staging/lws/ios_arm64_release/
 
       - name: Upload lws (ios arm64)
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_lws_ios_arm64
