--- a/.github/workflows/build_lws_linux_arm32.yml
+++ b/.github/workflows/build_lws_linux_arm32.yml
@@ -56,7 +56,7 @@ jobs:
           cp libwebsockets/out/lib/libwebsockets.a staging/lws/linux_arm32_release/
 
       - name: Upload lws (arm32)
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_lws_linux_arm32
