--- a/.github/workflows/build_lws_linux_arm64.yml
+++ b/.github/workflows/build_lws_linux_arm64.yml
@@ -56,7 +56,7 @@ jobs:
           cp libwebsockets/out/lib/libwebsockets.a staging/lws/linux_arm64_release/
 
       - name: Upload lws (arm64)
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_lws_linux_arm64
