--- a/.github/workflows/build_lws_macos_arm64.yml
+++ b/.github/workflows/build_lws_macos_arm64.yml
@@ -65,7 +65,7 @@ jobs:
           /bin/bash -c 'cd libwebsockets; p=$(find out -name libwebsockets.a -print -quit); cp "$p" "$GITHUB_WORKSPACE/staging/lws/macos_arm64_release/"'
 
       - name: Upload lws (macOS arm64)
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_lws_macos_arm64
