--- a/.github/workflows/build_lws_windows_arm64.yml
+++ b/.github/workflows/build_lws_windows_arm64.yml
@@ -47,7 +47,7 @@ jobs:
           Copy-Item $lib.FullName staging/lws/windows_arm64_release/
 
       - name: Upload lws (windows arm64)
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_lws_windows_arm64
