--- a/.github/workflows/build_v8_android_arm32.yml
+++ b/.github/workflows/build_v8_android_arm32.yml
@@ -20,6 +20,11 @@ jobs:
       V8_VERSION: ${{ inputs.v8_version || github.event.inputs.v8_version }}
 
     steps:
+      - name: Detect act environment
+        shell: pwsh
+        run: |
+          if ($env:ACT) { echo "IS_ACT=true" >> $env:GITHUB_ENV } else { echo "IS_ACT=false" >> $env:GITHUB_ENV }
+
       - uses: actions/checkout@v4
         with:
           path: Scripts
@@ -105,7 +110,7 @@ jobs:
           cp $GITHUB_WORKSPACE/v8/v8/out.gn/arm.release/obj/libv8_monolith.a staging/v8/android.arm32.release/
 
       - name: Upload
-        if: ${{ env.ACTIONS_RUNTIME_URL != '' }}
+        if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_v8_android_arm32
