--- a/.github/workflows/build_v8_macos_x86_64.yml
+++ b/.github/workflows/build_v8_macos_x86_64.yml
@@ -62,10 +62,13 @@ jobs:
           ls -l $GITHUB_WORKSPACE/depot_tools/autoninja 
           ninja -C ./out.gn/x64.release v8_monolith
 
+          cd $GITHUB_WORKSPACE
+          mkdir -p staging/v8/linux.x86_64.release
+          cp $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/obj/libv8_monolith.a staging/v8/linux.x86_64.release/
+
       - name: Upload
         if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_v8_macos_x86_64
-          path: v8/v8/out.gn/x64.release/obj/libv8_monolith.a
-
+          path: staging/
