--- a/.github/workflows/build_v8_android_x86_64.yml
+++ b/.github/workflows/build_v8_android_x86_64.yml
@@ -102,9 +102,13 @@ jobs:
           cat $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/args.gn
           ninja -C ./out.gn/x64.release v8_monolith
 
+          cd $GITHUB_WORKSPACE
+          mkdir -p staging/v8/android.x86_64.release
+          cp $GITHUB_WORKSPACE/v8/v8/out.gn/x64.release/obj/libv8_monolith.a staging/v8/android.x86_64.release/
+
       - name: Upload
         if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
           name: prebuilt_v8_android_x86_64
-          path: v8/v8/out.gn/x64.release/obj/libv8_monolith.a
+          path: staging/
