--- a/.github/workflows/build_v8_windows_arm64.yml
+++ b/.github/workflows/build_v8_windows_arm64.yml
@@ -89,11 +89,15 @@ jobs:
           echo _____results_____
           dir %GITHUB_WORKSPACE%\v8\v8\out.gn\arm64.release\obj\*.lib
 
+          cd %GITHUB_WORKSPACE%
+          mkdir staging\v8\include
+          mkdir staging\v8\windows_arm64_release
+          xcopy %GITHUB_WORKSPACE%\v8\v8\include staging\v8\include\ /Q /R /S /F /Y
+          copy %GITHUB_WORKSPACE%\v8\v8\out.gn\arm64.release\obj\v8_monolith.lib staging\v8\windows_arm64_release\v8_monolith.lib /Y /B
+
       - name: Upload
         if: ${{ env.IS_ACT != 'true' || env.ACTIONS_RUNTIME_URL != '' }}
         uses: actions/upload-artifact@v4
         with:
-          path: v8/v8/out.gn/arm64.release/obj/v8_monolith.lib
           name: prebuilt_v8_windows_arm64
-
-
+          path: staging/
