--- a/.github/workflows/build_lws_linux_x86_64.yml
+++ b/.github/workflows/build_lws_linux_x86_64.yml
@@ -43,7 +43,7 @@ jobs:
           $SUDO rm -rf /var/lib/apt/lists/* || true
           cd "$GITHUB_WORKSPACE"
           mkdir -p staging/lws/linux_x86_64_release
-          cp -a libwebsockets/include staging/lws/linux_x86_64_release/
+          cp -a libwebsockets/out/include staging/lws/linux_x86_64_release/
           cp libwebsockets/out/lib/libwebsockets.a staging/lws/linux_x86_64_release/
 
       - name: Upload lws (x86_64)
