--- a/.github/workflows/build_lws_windows_arm64.yml
+++ b/.github/workflows/build_lws_windows_arm64.yml
@@ -37,7 +37,7 @@ jobs:
           cd "$env:GITHUB_WORKSPACE/libwebsockets"
           New-Item -ItemType Directory -Force -Path out | Out-Null
           cd out
-          cmake -G "Visual Studio 17 2022" -A ARM64 -DBUILD_SHARED_LIBS=OFF -DLWS_WITH_SSL=0 -DCMAKE_BUILD_TYPE=Release ..
+          cmake -G "Visual Studio 17 2022" -A ARM64 -DBUILD_SHARED_LIBS=OFF -DLWS_WITH_SSL=0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded ..
           cmake --build . --config Release -- /m
           cd "$env:GITHUB_WORKSPACE"
           New-Item -ItemType Directory -Force -Path staging/lws/windows_arm64_release | Out-Null
