--- a/.github/workflows/build_lws_windows_x86_64.yml
+++ b/.github/workflows/build_lws_windows_x86_64.yml
@@ -37,7 +37,11 @@ jobs:
           cd "$env:GITHUB_WORKSPACE/libwebsockets"
           New-Item -ItemType Directory -Force -Path out | Out-Null
           cd out
-          cmake -G "Visual Studio 17 2022" -A x64 -DBUILD_SHARED_LIBS=OFF -DLWS_WITH_SSL=0 -DCMAKE_BUILD_TYPE=Release -DCMAKE_MSVC_RUNTIME_LIBRARY=MultiThreaded ..
+          cmake -G "Visual Studio 17 2022" -A x64 `
+            -DLWS_WITH_SHARED=OFF `
+            -DLWS_WITH_SSL=0 `
+            -DCMAKE_C_FLAGS_RELEASE="/MT /O2 /Ob2 /DNDEBUG" `
+            ..
           cmake --build . --config Release -- /m
           cd "$env:GITHUB_WORKSPACE"
           New-Item -ItemType Directory -Force -Path staging/lws/windows_x86_64_release | Out-Null
